--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,6 @@ kiteconnect==4.2.0
 pyotp==2.9.0
 Werkzeug==2.2.2
 pycryptodome==3.20.0
-git+https://github.com/bmoscon/cryptofeed.git
+git+https://github.com/bmoscon/cryptofeed.git@47a3e4a438fb1842e3e7dfc726639db488df2394
 plotly-resampler==0.10.0
 newrelic
